tests/samples/negative/expressions/compound_assignment_bool.ax
module compound_assignment_bool;

fn main() -> i32 {
    var flag: bool = true;
    flag += 1;
    return 0;
}
